# typed

./: Cargo.toml  README.md
src/: builder.rs  lib.rs  tools.rs
src/docs/: field.md  struct.md  type.md
tests/: typed-test.rs
