[package]
name = "typer"
version = "0.1.0"
edition = "2021"
description = "Get the types of a struct"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.49"
quote = "1.0.23"
rustfmt = "0.10.0"
syn = "1.0.107"

[lib]
proc-macro = true
doctest = false
