[package]
name = "rust-typed"
version = "0.1.1"
edition = "2021"
description = "Get the types of a struct"
license = "MIT OR Apache-2.0"
keywords = ["rust", "type", "type-it", "typed", "protocol"]
authors = ["Viktor Lott"]
categories = ["development-tools::procedural-macro-helpers"]
repository = "https://github.com/viktorlott/typed"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.49"
quote = "1.0.23"
rustfmt = "0.10.0"
syn = { version = "1.0.107", features = [ "visit", "full" ]}

[lib]
proc-macro = true
doctest = false
